@startuml Diagramme de Classes - EasyColoc

skinparam classAttributeIconSize 0

class User {
    + id : bigint <<PK>>
    + name : string
    + email : string <<unique>>
    + email_verified_at : timestamp [nullable]
    + password : string <<hashed>>
    + role : string {default: "user"}
    + is_banned : boolean {default: false}
    + reputation : integer {default: 0}
    + remember_token : string [nullable]
    + created_at : timestamp
    + updated_at : timestamp
    --
    + colocations() : BelongsToMany<Colocation>
    + ownedColocations() : HasMany<Colocation>
    + expenses() : HasMany<Expense>
    + settlementsOwed() : HasMany<Settlement>
    + settlementsReceivable() : HasMany<Settlement>
    + isAdmin() : bool
    + isBanned() : bool
    + activeColocation() : Colocation|null
    + hasActiveColocation() : bool
}

class Colocation {
    + id : bigint <<PK>>
    + name : string
    + description : text [nullable]
    + status : string {default: "active"}
    + owner_id : bigint <<FK>>
    + created_at : timestamp
    + updated_at : timestamp
    --
    + owner() : BelongsTo<User>
    + members() : BelongsToMany<User>
    + activeMembers() : BelongsToMany<User>
    + expenses() : HasMany<Expense>
    + categories() : HasMany<Category>
    + invitations() : HasMany<Invitation>
    + settlements() : HasMany<Settlement>
    + isActive() : bool
    + isCancelled() : bool
}

class "colocation_user\n(table pivot)" as ColocationUser {
    + id : bigint <<PK>>
    + colocation_id : bigint <<FK>>
    + user_id : bigint <<FK>>
    + role : string {default: "member"}
    + joined_at : timestamp
    + left_at : timestamp [nullable]
    + created_at : timestamp
    + updated_at : timestamp
    --
    <<unique>> (colocation_id, user_id)
}

class Expense {
    + id : bigint <<PK>>
    + title : string
    + amount : decimal(10,2)
    + expense_date : date
    + category_id : bigint <<FK>> [nullable]
    + colocation_id : bigint <<FK>>
    + paid_by : bigint <<FK>>
    + created_at : timestamp
    + updated_at : timestamp
    --
    + colocation() : BelongsTo<Colocation>
    + category() : BelongsTo<Category>
    + payer() : BelongsTo<User>
}

class Category {
    + id : bigint <<PK>>
    + name : string
    + colocation_id : bigint <<FK>>
    + created_at : timestamp
    + updated_at : timestamp
    --
    + colocation() : BelongsTo<Colocation>
    + expenses() : HasMany<Expense>
}

class Settlement {
    + id : bigint <<PK>>
    + colocation_id : bigint <<FK>>
    + from_user_id : bigint <<FK>>
    + to_user_id : bigint <<FK>>
    + amount : decimal(10,2)
    + is_paid : boolean {default: false}
    + created_at : timestamp
    + updated_at : timestamp
    --
    + colocation() : BelongsTo<Colocation>
    + fromUser() : BelongsTo<User>
    + toUser() : BelongsTo<User>
}

class Invitation {
    + id : bigint <<PK>>
    + colocation_id : bigint <<FK>>
    + email : string
    + token : string <<unique>>
    + status : string {default: "pending"}
    + created_at : timestamp
    + updated_at : timestamp
    --
    + colocation() : BelongsTo<Colocation>
    + isPending() : bool
}

' ==================
' Relations
' ==================

User "1" -- "0..*" Colocation : possede (owner_id) >
User "0..*" -- "0..*" Colocation : membre de
(User, Colocation) .. ColocationUser

User "1" -- "0..*" Expense : paye (paid_by) >
User "1" -- "0..*" Settlement : doit (from_user_id) >
User "1" -- "0..*" Settlement : recoit (to_user_id) >

Colocation "1" -- "0..*" Expense : contient >
Colocation "1" -- "0..*" Category : contient >
Colocation "1" -- "0..*" Invitation : contient >
Colocation "1" -- "0..*" Settlement : contient >

Category "0..1" -- "0..*" Expense : classifie >

@enduml
